# hodei-pipelines

./: .clippy.toml  .dockerignore  .env.dev  .gitignore  .pre-commit-config.yaml  .rustfmt.toml  ARCHITECTURE_AND_TESTING_GUIDE.md  CHANGELOG.md  CLAUDE.md  CODE_MANIFEST.csv  Cargo.toml  DDD_PROGRESS.md  Dockerfile  E2E_TESTING_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  Makefile  QUICK_FIX_K8S.sh  README.es.md  README.md  SPRINT1_SUMMARY.md  SPRINT2_PROGRESS.md  SPRINT3_PROGRESS.md  SPRINT4_PROGRESS.md  SPRINT5_PROGRESS.md  TESTING.md  analyze_improvements.py  codebase_complete.txt  coverage.lcov  docker-compose.dev.yml  docker-compose.yml  extract_improvements.py  extract_improvements_v2.py  fix_result.py  improvements_analysis.json  improvements_extracted.json  openapi-typescript.config.json  package.json  tarpaulin-report.html  technical_debt_analysis.json  test_output.txt  (+1 more)
crates-old/crates/hwp-proto/: Cargo.toml  build.rs
crates/adapters/: Cargo.toml
crates/adapters/migrations/: 20241201_pipeline_executions.sql
crates/adapters/src/: cached_repository.rs  docker_provider.rs  event_bus.rs  extractors.rs  kubernetes_provider.rs  kubernetes_provider_tests.rs  lib.rs  metrics.rs  metrics_persistence_service.rs  metrics_timeseries_repository.rs  postgres.rs  postgresql_rbac_repositories.rs  provider_factory.rs  rbac_repositories.rs  redb.rs  repositories.rs  worker_client.rs  worker_metrics_tests.rs  worker_registration.rs
crates/adapters/test-certs/: ca-cert.srl  ca.cnf
crates/adapters/tests/: integration_tests.rs  nats_integration.rs  td002_poison_error_test.rs
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/application/: Cargo.toml
crates/application/src/: event_orchestrator.rs  lib.rs
crates/core/: Cargo.toml
crates/core/src/: circuit_breaker.rs  cqrs.rs  error.rs  event_registry.rs  event_sourced_job.rs  events.rs  global_resource_controller.rs  health_checks.rs  job.rs  job_cqrs.rs  job_definitions.rs  job_definitions_old.rs  job_events.rs  job_handlers.rs  job_specifications.rs  lib.rs  pipeline.rs  pipeline_execution.rs  pipeline_step_specifications.rs  projections.rs  resource_governance.rs  security.rs  specifications.rs  tracing.rs  worker.rs  worker_messages.rs
crates/core/tests/: event_store_tests.rs  td001_legacy_removal_test.rs  test_grc.rs  test_quota_enforcement.rs  test_resource_governance.rs
crates/credential-rotation/: Cargo.toml
crates/credential-rotation/src/: lib.rs
crates/developer-experience/rust-sdk/: Cargo.toml  README.md
crates/developer-experience/sdk-core/: Cargo.toml
crates/docker-provider/: Cargo.toml
crates/docker-provider/src/: lib.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/domain/tests/: event_store_tests.rs  td001_legacy_removal_test.rs  test_quota_enforcement.rs
crates/e2e-tests/: Cargo.toml  README.md
crates/e2e-tests/config/: docker-compose.yml
crates/e2e-tests/src/: lib.rs
crates/e2e-tests/tests/: nats_integration.rs
crates/hwp-agent/: Cargo.toml  Dockerfile
crates/hwp-agent/src/: config.rs  lib.rs  main.rs
crates/hwp-proto/: Cargo.toml  build.rs
crates/hwp-proto/protos/: hwp.proto
crates/hwp-proto/src/: lib.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/migrations/: 20240101000000_initial_schema.sql
crates/infrastructure/src/: lib.rs
crates/infrastructure/tests/: integration_tests.rs
crates/integration-tests/: Cargo.toml
crates/integration-tests/src/: application_integration.rs  docker_provider_integration.rs  e2e_optimized_tests.rs  lib.rs  nats_integration.rs  postgres_integration.rs  testcontainers_manager.rs
crates/integration-tests/tests/: README.md  api_integration_test.rs  api_integration_with_containers.rs  basic_postgres_test.rs  cached_repository_test.rs  cached_repository_test.rs.disabled  pipeline_execution_integration_test.rs  pipeline_execution_setup.rs  redb_repository_test.rs  test_singleton_optimized.rs  testcontainers_optimized_pattern.rs  testcontainers_real_integration.rs  us_prod_01_real_di_test.rs  us_prod_02_pipeline_crud_mocked.rs  us_prod_02_pipeline_crud_test.rs  us_prod_03_pipeline_execution_test.rs  websocket_terminal_test.rs
crates/intelligent-scheduling/auto-scaling/: Cargo.toml
crates/intelligent-scheduling/ml-prediction/: Cargo.toml
crates/kubernetes-provider/: Cargo.toml
crates/kubernetes-provider/src/: lib.rs
crates/modules/: Cargo.toml
crates/modules/src/: artifact_management.rs  auto_scaling_engine.rs  burst_capacity_manager.rs  cooldown_management.rs  cost_optimization.rs  cost_tracking.rs  global_resource_controller.rs  lib.rs  log_persistence.rs  metrics_collection.rs  multi_tenancy_quota_manager.rs  orchestrator.rs  pipeline_crud.rs  rbac.rs  (+15 more)
crates/provider-abstraction/: Cargo.toml
crates/scheduler/: Cargo.toml  Dockerfile  SCHEDULER_INTEGRATION.md
crates/security/: Cargo.toml
crates/server/: Cargo.toml
crates/shared-types/: Cargo.toml
crates/worker-lifecycle-manager/: Cargo.toml  Dockerfile
server/: Cargo.toml  config.example.yaml
server/src/: alerting_rules.rs  api_docs.rs  api_router.rs  audit_logs_compliance.rs  auth.rs  bootstrap.rs  budget_management.rs  burst_capacity.rs  cooldown_management.rs  cost_optimization_recommendations.rs  cost_reports.rs  cost_tracking_aggregation.rs  dynamic_pool_management.rs  error.rs  execution_api.rs  grafana_dashboards.rs  grpc.rs  historical_metrics.rs  job_prioritization.rs  lib.rs  live_metrics_api.rs  logs_api.rs  logs_explorer_ui.rs  main.rs  main_minimal.rs  metrics.rs  metrics_api.rs  observability_api.rs  pipeline_api.rs  pool_lifecycle.rs  prometheus_integration.rs  queue_status.rs  quota_enforcement.rs  rbac.rs  realtime_status_api.rs  resource_pool_crud.rs  resource_pool_metrics.rs  resource_quotas.rs  scaling_policies.rs  security_vulnerability_tracking.rs  (+6 more)
server/tests/: tenant_integration_test.rs  websocket_test.rs
worker-manager/: Cargo.toml  README.md  lib.rs
worker-manager/credentials/: aws_secrets.rs  keycloak.rs  mod.rs  rotation.rs  vault.rs
worker-manager/examples/: advanced_usage.rs  basic_usage.rs
(+866 files in other folders)
