[workspace]
members = [
    "crates/domain",
    "crates/application",
    "crates/infrastructure",
    "crates/integration-tests",
    "crates/api",
]
resolver = "2"
rust-version = "1.80"

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
axum = "0.7"

# Testing dependencies
tokio-test = "0.4"
assert_matches = "1.5"
pretty_assertions = "1.0"
mockall = "0.12"
testcontainers = "0.26"
testcontainers-modules = { version = "3.0", features = ["postgres"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
once_cell = "1.19"

# Web framework dependencies
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }
validator = { version = "0.16", features = ["derive"] }

# OpenAPI documentation
utoipa = { version = "4.2", features = ["axum", "chrono"] }
utoipa-gen = { version = "4.3", features = ["axum"] }

# CI/CD tools
cargo-audit = "0.18"
cargo-llvm-cov = "0.6"
