[package]
name = "hodei-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Hodei Pipelines Server - Monolithic Modular Architecture"
license.workspace = true
repository.workspace = true

[dependencies]
# Workspace core crates
hodei-core = { workspace = true }
hodei-ports = { workspace = true }
hodei-modules = { workspace = true }
hodei-adapters = { workspace = true, features = ["docker-provider", "kubernetes-provider"] }
hwp-proto = { workspace = true }

# Workspace dependencies
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true, features = ["sync"] }
tonic = { workspace = true, features = ["transport"] }
axum = { workspace = true, features = ["json", "http2"] }
tower = { workspace = true, features = ["util", "timeout"] }
tower-http = { workspace = true, features = ["cors", "trace"] }
hyper = { workspace = true, features = ["full"] }
http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
prometheus = { workspace = true }
config = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
serde_yaml = "0.9"
reqwest = { version = "0.11", features = ["json"] }
async-trait = { workspace = true }

# OpenAPI / Swagger UI
utoipa = "4.2"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

[lib]
name = "hodei_server"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[dev-dependencies]
tempfile = { workspace = true }
