[package]
name = "worker-manager"
version = "1.0.0"
edition = "2024"
authors = ["Worker Manager Team"]
description = "A comprehensive Rust-based worker management system providing abstractions for multiple infrastructure providers and credential management with automatic rotation"
license = "MIT"
repository = "https://github.com/your-org/worker-manager"
keywords = ["worker", "kubernetes", "docker", "credentials", "rotation", "ci-cd", "infrastructure"]
categories = ["network-programming", "command-line-utilities", "web-programming"]

[dependencies]
# Async runtime and networking
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Error handling and logging
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "chrono"] }

# Serialization and configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.14"

# Data types and utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
lazy_static = "1.4"

# HTTP client for external integrations
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio-stream = "0.1"

# Kubernetes integration
kube = { version = "0.85", features = ["client", "runtime"] }
k8s-openapi = { version = "0.20", features = ["v1_26"] }

# Docker integration
docker = "0.4"

# AWS integrations
aws-config = "0.57"
aws-sdk-secretsmanager = "0.27"
aws-sdk-sts = "0.27"

# HashiCorp Vault integration
vault = "0.5"

# Base64 encoding
base64 = "0.22"

# Async traits
tokio-util = { version = "0.7", features = ["full"] }

[build-dependencies]
cbindgen = "0.26"

[dev-dependencies]
# Testing
tokio-test = "0.4"
mockall = "0.12"
rstest = "0.18"
criterion = { version = "0.5", features = ["html_reports"] }

# Examples
examples = []
[[example]]
name = "basic-usage"
path = "examples/basic_usage.rs"

[[example]]
name = "advanced-usage"
path = "examples/advanced_usage.rs"

[features]
default = ["kubernetes", "docker", "vault", "aws", "keycloak"]
kubernetes = ["kube/client", "kube/runtime"]
docker = ["docker"]
vault = ["vault"]
aws = ["aws-config", "aws-sdk-secretsmanager", "aws-sdk-sts"]
keycloak = ["reqwest/json"]

[profile.release]
opt-level = 3
debug = false
strip = true
codegen-units = 1

[profile.debug]
opt-level = 0
debug = true
strip = false

[lib]
name = "worker_manager"
path = "lib.rs"
test = true
doctest = true
bench = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]

[package.metadata.cargo-make]
tasks = {
    "build-examples" = {
        cmd = "cargo build --all-features --examples"
    },
    "test-all" = {
        cmd = "cargo test --all-features"
    },
    "benchmark" = {
        cmd = "cargo bench --all-features"
    },
    "lint" = {
        cmd = "cargo clippy --all-features -- -D warnings"
    },
    "fmt" = {
        cmd = "cargo fmt --all"
    },
    "docs" = {
        cmd = "cargo doc --all-features --no-deps"
    },
    "clean" = {
        cmd = "cargo clean"
    }
}
