[package]
name = "hodei-adapters"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Adapters (infrastructure implementations) for Hodei Jobs"
license.workspace = true
repository.workspace = true

[dependencies]
# Workspace core crates
hodei-core = { workspace = true, features = ["sqlx"] }
hodei-ports = { workspace = true }
hodei-shared-types = { workspace = true, features = ["sqlx"] }
hwp-proto = { workspace = true }

# Workspace async and utilities
async-trait = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["codec"] }
futures = { workspace = true }

# Workspace serialization
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

# Workspace error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Workspace utilities
uuid = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }

# Database
sqlx = { workspace = true }
redb = { workspace = true }
config = { workspace = true }

# Security
jsonwebtoken = { workspace = true }
aho-corasick = { workspace = true }
rustls = { workspace = true }
x509-parser = { workspace = true }

# Production Worker Client
tonic = { workspace = true, features = ["transport"] }
reqwest = { workspace = true, features = ["json"] }

[dev-dependencies]
tempfile = { workspace = true }
