[package]
name = "hodei-adapters"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Adapters (infrastructure implementations) for Hodei Jobs"
license.workspace = true
repository.workspace = true

[dependencies]
# Workspace core crates
hodei-core = { workspace = true, features = ["sqlx", "serde"] }
hodei-ports = { workspace = true }
hodei-shared-types = { workspace = true, features = ["sqlx"] }
hwp-proto = { workspace = true }

# Workspace async and utilities
async-trait = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["codec"] }
futures = { workspace = true }

# Workspace serialization
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

# Workspace error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Workspace utilities
uuid = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
# Performance optimizations
dashmap = { version = "5.5", default-features = false }
bincode = { version = "1.3", default-features = false }

# Database
sqlx = { workspace = true }
redb = { workspace = true }
config = { workspace = true }

# Security
jsonwebtoken = { workspace = true }
aho-corasick = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = "2.2"
x509-parser = { workspace = true }

# Production Worker Client
tonic = { workspace = true, features = ["transport"] }
reqwest = { workspace = true, features = ["json"] }

# Testcontainers for integration tests (used when integration feature is enabled)
testcontainers = { workspace = true, optional = true }

# Docker provider
bollard = { version = "0.16", features = ["buildkit"] }

# Kubernetes provider
# Note: Using kubectl commands instead of kube client to avoid k8s-openapi dependency issues

[dev-dependencies]
tempfile = { workspace = true }
tracing-test = "0.2.5"

[features]
integration = ["testcontainers", "sqlx/runtime-tokio-rustls", "hodei-core/sqlx", "hodei-shared-types/sqlx"]
docker-provider = []
kubernetes-provider = []
default = []

# Perfiles de test
[profile.integration]
inherits = "test"
# Los tests de integración solo se ejecutan con: cargo test --features integration --lib postgres
