[package]
name = "hodei-pipelines-adapters"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Adapters (infrastructure implementations) for Hodei Pipelines"
license.workspace = true
repository.workspace = true

[dependencies]
# Workspace core crates
hodei-pipelines-core = { workspace = true, features = ["sqlx", "serde"] }
hodei-pipelines-ports = { workspace = true }
hodei-pipelines-proto = { workspace = true }

# Workspace async and utilities
async-trait = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["codec"] }
futures = { workspace = true }
axum = { workspace = true, features = ["ws"] }

# Workspace serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
chrono = { workspace = true }

# Workspace error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Workspace utilities
uuid = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
itertools = "0.14.0"
# Performance optimizations
dashmap = { version = "6.1.0", default-features = false }
bincode = { version = "2.0.1", default-features = false }

# Database
sqlx = { workspace = true }
redb = { workspace = true }
config = { workspace = true }

# Security
jsonwebtoken = { workspace = true }
aho-corasick = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = "2.2"
x509-parser = { workspace = true }

# Production Worker Client
tonic = { workspace = true, features = ["transport"] }
reqwest = { workspace = true, features = ["json"] }

# Testcontainers for integration tests (used when integration feature is enabled)
testcontainers = { workspace = true, optional = true }

# Docker provider - using bollard-next (no axum conflict, uses hyper directly)
bollard-next = "0.18.1"

# Kubernetes provider - using REST API via reqwest (no heavy dependencies)
shellexpand = "3.1"

# Metrics and monitoring
prometheus = { workspace = true }

# NATS JetStream
async-nats = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tracing-test = "0.2.5"
serial_test = { version = "3.0", default-features = false }

[features]
integration = [
    "testcontainers",
    "sqlx/runtime-tokio-rustls",
    "hodei-pipelines-core/sqlx",
]
docker-provider = []
kubernetes-provider = []
default = []
# Ensure serde is always available for tests
test = ["hodei-pipelines-core/serde"]

# Perfiles de test
[profile.integration]
inherits = "test"
# Los tests de integración solo se ejecutan con: cargo test --features integration --lib postgres
