[package]
name = "hodei-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Domain core for Hodei Jobs - pure business logic"
license.workspace = true
repository.workspace = true

[dependencies]
# Shared Kernel - Value Objects and common types
hodei-shared-types = { workspace = true }

# Workspace dependencies
uuid = { workspace = true, features = ["v4", "serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true, optional = true }

[features]
sqlx = ["dep:sqlx"]

[dev-dependencies]
tempfile = { workspace = true }
