[package]
name = "hodei-pipelines-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Domain core for Hodei Pipelines - pure business logic and shared types"
license.workspace = true
repository.workspace = true

[dependencies]
# Workspace dependencies
uuid = { workspace = true, features = ["v4", "v5", "serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true, optional = true }
daggy = { workspace = true }
dashmap = { workspace = true, optional = true }
async-trait = { workspace = true }
sysinfo = { workspace = true, optional = true }
futures = { workspace = true }
utoipa = { version = "5.3", features = ["axum_extras", "chrono", "uuid"] }

# Internal dependencies - removed to avoid circular dependency

[features]
sqlx = ["dep:sqlx"]
dashmap = ["dep:dashmap"]
serde = []
sysinfo = ["dep:sysinfo"]
# Integration tests require PostgreSQL
event-store-tests = ["sqlx"]

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
proptest = { workspace = true }

# Test dependencies
