[package]
name = "domain"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { version = "1.0", features = ["sync", "macros"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["test-util", "macros", "rt-multi-thread"] }
pretty_assertions = "1.0"
