[package]
name = "e2e-tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "End-to-end tests for hodei-jobs platform"
license.workspace = true
repository.workspace = true

[dependencies]
# Workspace async and utilities
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }

# Workspace serialization
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

# HTTP
reqwest = { workspace = true, features = ["json"] }

# Testing
tempfile = { workspace = true }
testcontainers = { workspace = true }
wiremock = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
pretty_assertions = "1.4"

# Workspace crates
uuid = { workspace = true, features = ["v4"] }
anyhow = { workspace = true }

# Workspace specific crates
hodei-core = { workspace = true }
hodei-ports = { workspace = true }
hodei-adapters = { workspace = true }

[features]
default = []
std = []
api-tests = []
sdk-tests = []
chaos-tests = []
