[package]
name = "hwp-agent"
version.workspace = true
edition.workspace = true

[dependencies]
# Core async runtime
tokio = { workspace = true, features = ["full"] }

# gRPC client
tonic = { version = "0.11", features = ["gzip", "transport"] }
prost = "0.12"
prost-types = "0.12"

# PTY support
portable-pty = "0.8"

# Resource monitoring
sysinfo = "0.30"

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json", "fmt"] }

# Configuration
serde = { workspace = true, features = ["derive"] }
config = "0.14"

# Utilities
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
chrono = { workspace = true, features = ["serde"] }

# HTTP for artifacts
reqwest = { version = "0.12", features = ["json", "stream"] }

# Compression
flate2 = "1.0"

# Security module (optional)
hodei-security = { path = "../security", optional = true }

[features]
security = ["hodei-security"]

[build-dependencies]
tonic-build = { version = "0.11", features = ["prost"] }

[[bin]]
name = "hwp-agent"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.0"
assert_matches = "1.5"
