[package]
name = "hwp-pipelines-agent"
version.workspace = true
edition.workspace = true

[dependencies]
# Workspace dependencies
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json", "fmt"] }
serde = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
chrono = { workspace = true, features = ["serde"] }
config = { workspace = true }

# gRPC
hodei-pipelines-proto = { workspace = true }
tonic = { workspace = true, features = ["gzip", "transport"] }

# PTY, monitoring, and utilities
portable-pty = { workspace = true }
sysinfo = { workspace = true }
hostname = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"] }
flate2 = { workspace = true }

# Lock-free data structures and atomics
crossbeam = { workspace = true }

# HTTP utilities
tokio-util = { workspace = true, features = ["codec"] }

# Crypto utilities
sha2 = { workspace = true }

# Text processing utilities
aho-corasick = { workspace = true }

# Workspace crates
hodei-pipelines-domain = { workspace = true }
hodei-pipelines-ports = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }
prost-build = { workspace = true }

[[bin]]
name = "hwp-pipeline-agent"
path = "src/main.rs"

[dev-dependencies]
tempfile = { workspace = true }
assert_matches = { workspace = true }
