[package]
name = "infrastructure"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
async-trait = { workspace = true }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
deadpool = "0.10"
deadpool-postgres = "0.12"
bb8 = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.0", features = ["test-util", "macros", "rt-multi-thread", "sync", "net"] }

[dev-dependencies]
pretty_assertions = "1.0"
