[package]
name = "integration-pipelines-tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt"] }
reqwest = { workspace = true, features = ["json", "stream"] }
once_cell = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
anyhow = { workspace = true }
sqlx = { workspace = true, features = [
    "macros",
    "runtime-tokio-rustls",
    "postgres",
] }
portable-pty = { workspace = true }
async-nats = { workspace = true }

# Workspace crates
hodei-pipelines-domain = { workspace = true }
hodei-pipelines-ports = { workspace = true, features = ["testing"] }
hodei-pipelines-adapters = { workspace = true }
hodei-pipelines-server = { workspace = true }
hodei-pipelines-application = { workspace = true }
hodei-pipelines-proto = { workspace = true }

# Testing utilities
async-trait = "0.1"
thiserror = "2.0"
tokio-postgres = "0.7"


[dev-dependencies]
tempfile = { workspace = true }
testcontainers = { workspace = true }

[features]
container_tests = []

[profile.container-tests]
inherits = "test"
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = "abort"
codegen-units = 16
