[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
domain = { path = "../domain" }
application = { path = "../application" }
infrastructure = { path = "../infrastructure" }

# Testing
testcontainers = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
pretty_assertions = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Time and async
chrono = { workspace = true, features = ["serde"] }
async-trait = { workspace = true }

[dev-dependencies]
# Additional test utilities
tempfile = "3.0"
